# teoinfo-lab-II

./: Lab2.ipynb  README.md  lab.ipynb  pyproject.toml
